fix content alignment

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -6,7 +6,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 80%;
+  width: 80vw;
   max-width: 1400px;
   margin-inline: auto;
   position: relative;
