--- a/styles/main.scss
+++ b/styles/main.scss
@@ -61,7 +61,7 @@ header {
   //max-width: 1400px;
 
   & > div {
-    width: 80%;
+    width: 80vw;
     max-width: 1400px;
     margin-inline: auto;
   }
